syntax = "proto3";

package com.tmda.chatapp.blackgram;

option java_package = "com.tmda.chatapp.user";
option java_multiple_files = true;

message Date {
    // Year of date. Must be from 1 to 9999, or 0 if specifying a date without
    // a year.
    int32 year = 1;

    // Month of year. Must be from 1 to 12, or 0 if specifying a year without a
    // month and day.
    int32 month = 2;

    // Day of month. Must be from 1 to 31 and valid for the year and month, or 0
    // if specifying a year by itself or a year and month where the day is not
    // significant.
    int32 day = 3;
}


message UserRequest {
    string id = 1;
    string userName = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
    string email = 6;
    string birthDay = 7;
    Date min_ram = 8;
}

message UserResponse {
    string userMessage=1;
}

message ContactAdd {
    string Username = 1;
    string contact = 2;
}

service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse) { }

    rpc AddContact(ContactAdd) returns (UserResponse){}

}